--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ progress==1.6
 py==1.11.0
 pyelftools==0.28
 pyobjc==8.4.1
-pyobjc-core==8.4.1
+pyobjc-core
 pyobjc-framework-Accessibility==8.4.1
 pyobjc-framework-Accounts==8.4.1
 pyobjc-framework-AddressBook==8.4.1
